fix: feature-area spacing fix on xl

--- a/css/style.css
+++ b/css/style.css
@@ -10918,7 +10918,7 @@ ul.children {
 .service-area-wrapper {
   z-index: unset !important;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
+@media only screen and (min-width: 992px) and (max-width: 1399px) {
   .service-area-wrapper {
     margin-top: 0 !important;
   }
